# nano-world-model

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: README.md  config_system.md  evaluation.md  training.md
docs/applications/: long_rollout.md  planning.md  video_to_3d.md
docs/datasets/: README.md
src/: callbacks.py  launch_viewer.sh  main.py
src/configs/: config.yaml
src/configs/experiment/: ablation_rt1.yaml  csgo.yaml  default.yaml  dino_wm_granular.yaml  dino_wm_point_maze.yaml  dino_wm_pusht.yaml  dino_wm_rope.yaml  dino_wm_wall.yaml  evaluate_only.yaml  planning.yaml  rt1.yaml
src/configs/local/: paths.yaml.example
src/configs/model/: nanowm_b2.yaml  nanowm_l2.yaml  nanowm_l2_csgo.yaml  nanowm_s2.yaml  nanowm_s2_csgo.yaml
src/configs/planning/: base.yaml
src/diffusion/: __init__.py  df_sample.py  gaussian_diffusion.py
src/environments/: serial_vector_env.py  utils.py  venv.py
src/environments/pointmaze/: point_maze_wrapper.py
src/environments/pusht/: pusht_wrapper.py
src/environments/wall/: wall_env_wrapper.py
src/experiments/: __init__.py  base.py  planning_experiment.py  train_experiment.py
src/models/: __init__.py  nanowm.py
src/planning/: __init__.py  cem_planner.py  diffusion_world_model.py  objective.py  preprocessor.py
src/planning/envs/: __init__.py  registry.py
src/sample/: evaluate_metrics.py  plot_metrics.py  rollout.py  sample_dfot.py  sample_dfot.sh  sampling_utils.py
src/scripts/: video_to_pointcloud.py
src/tools/: precompute_latents.py
src/tools/metrics/: frechet_inception_distance.py  frechet_video_distance.py
src/utils/: distributed_utils.py  fvd.py  logger_utils.py  metrics.py  nanowm_utils.py  utils.py  vae_ops.py
src/wm_datasets/: README.md  __init__.py  stats_cache.py  video_transforms.py  world_model_dataset.py
(+25 files in other folders)
